fix(Favorite): resolved sizing and alignment issues with tooltip

--- a/stories/Tooltip.scss
+++ b/stories/Tooltip.scss
@@ -10,6 +10,7 @@
   top: 50%;
   transform: translate(0, -50%);
   pointer-events: none;
+  white-space: nowrap;
   padding: 0 $padding;
   height: $min-component-size;
   border-radius: $border-radius;
